fixed mobile padding and or spacing bugs and propagated them up to larger device widths on workshops page

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -983,8 +983,13 @@ footer {
   }
 }
 .workshop-list {
-  padding-top: 30px;
-  //padding-left: 37px;
+  @include mq(sm) {
+    padding-top: 30px;
+    padding-left: 65px;
+  }
+  @include mq(md) {
+    padding-left: 35px;
+  }
   padding-bottom: 3em;
   max-width: 640px;
   h2 {
